GET/POST reqs. POST not working

--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "express-handlebars": "^3.0.0",
+    "logger": "0.0.1",
+    "mongojs": "^2.6.0",
+    "mongoose": "^5.4.9",
+    "mysql": "^2.16.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7"
   }
 }
